[package]
name = "swarm-mod-special-attacks"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19", default-features = false }
serde_json = "1"
swarm-engine-api = { path = "../../engine-api/crates/swarm-engine-api", version = "=0.1.0" }
swarm-engine-plugin-sdk = { path = "../../engine-api/crates/swarm-engine-plugin-sdk", version = "=0.1.0" }
