[package]
name = "swarm-mod-special-attacks"
version = "0.1.0"
edition = "2024"
[dependencies]
bevy = { version = "0.19", default-features = false }
serde_json = "1"
swarm-engine-api = { git = "https://github.com/game-swarm/engine-api.git", rev = "d29a8f36b6d54ce6dfb5fb81985731110f7c48c8", version = "=0.1.0" }
swarm-engine-plugin-sdk = { git = "https://github.com/game-swarm/engine-api.git", rev = "d29a8f36b6d54ce6dfb5fb81985731110f7c48c8", version = "=0.1.0" }
